Mon Oct  3 00:05:33 2000  Andrew Lanoix <alanoix@umich.edu>

	* Added: gnetconfig.h.win32, config.h.win32
	* Code now compiles with both Glib 1.2, 1.3 on Win32

Mon Oct  2 11:19:12 2000  David Helder  <dhelder@umich.edu>

	* src/gnet-private.c: Remove include config.h 

Mon Oct  2 11:15:19 2000  David Helder  <dhelder@umich.edu>

	* src/inetaddr.c: Remove include of config.h.  Already
	   in gnet-private.h.

Sun Oct  1 19:42:07 2000  David Helder  <dhelder@umich.edu>

	* src/tcp.c (gnet_tcp_socket_new_async_cb): Remove the watch
	   before calling the user's callback.  This prevents it from
	   being called a second time, which could happen if we run the
	   main loop before we return.  Joe Shaw found this bug.
	* src/inetaddr.c (gnet_inetaddr_new_async_cb): "
	* src/inetaddr.c (gnet_inetaddr_get_name_async_cb): "

Sun Oct  1 13:58:35 2000  David Helder  <dhelder@umich.edu>

	* gnetconfig.h.in: Fixed endif (had string - not ANSI)

Sun Oct 1 3:48:33:19 2000  Andrew Lanoix  <alanoix@umich.edu>

	* hostinfo.c: Updated

Sun Oct 1 3:46:48:28 2000  Andrew Lanoix  <alanoix@umich.edu>

	* Temp patch to get examples to work on Win32
	  (dnstest.c echoserver.c echoclient.c)

Sun Oct 1 3:41:29:66 2000  Andrew Lanoix  <alanoix@umich.edu>

	* Workaround for win32 linking issue. Moved including 
	  winsock2 from inetadder.c to inetaddr.h 

Thu Sep 28 23:13:30 2000  David Helder  <dhelder@umich.edu>

	* README.win32: Added.  Writen by Andy.

Thu Sep 28 22:55:57 2000  David Helder  <dhelder@umich.edu>

	* gnetconfig.h.in: Added
	* Makefile.am: Install in library
	* gnet-config.h.in: Add gnetconfig.h
	* src/gnet.h: Fixed version stuff

	* src/gnet-private.h: Include sys/param if available.
	
	* src/*: Small windows fixes
	
Thu Sep 28 21:40:15 2000  David Helder  <dhelder@umich.edu>

	* src/gnet-private.h: Added Andy's 2nd patch.

Wed Sep 27 01:01:49 2000  David Helder  <dhelder@umich.edu>

	* *: First pass at merging in Andy's Win32 port.  Compiles in